--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-    <img src="photo.html.jpg" height="200">
+    <img src="main.jpg" height="200">
     <div class="container">
         
         </div>
